--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
 		"pull-env": "vercel env pull .env.local"
 	},
 	"devDependencies": {
-		"@iconify-json/bi": "^1.1.23",
-		"@sveltejs/adapter-vercel": "^5.4.1",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@iconify-json/bi": "^1.2.0",
+		"@sveltejs/adapter-vercel": "^5.4.3",
+		"@sveltejs/kit": "^2.5.26",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"sass": "^1.77.8",
-		"svelte": "5.0.0-next.205",
+		"svelte": "5.0.0-next.245",
 		"svelte-preprocess": "^6.0.2",
-		"typescript": "^5.5.4",
-		"unplugin-icons": "^0.19.1",
-		"vercel": "^35.2.2",
-		"vite": "^5.3.5"
+		"typescript": "^5.6.2",
+		"unplugin-icons": "^0.19.2",
+		"vercel": "^37.4.2",
+		"vite": "^5.4.4"
 	},
 	"dependencies": {
+		"@hexagon/base64": "^1.1.28",
 		"@vercel/analytics": "^1.3.1",
-		"@vercel/speed-insights": "^1.0.12"
-	}
+		"@vercel/speed-insights": "^1.0.12",
+		"dexie": "^4.0.8",
+		"jose": "^5.9.3"
+	},
+	"packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
